<resources>
    <string name="app_name">Togl</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">Level Selector</string>
    <string name="level_select">LEVEL SELECTOR</string>
    <string name="options">OPTIONS</string>
    <string name="credits">CREDITS</string>
    <string name="togl">TogL</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_selector">Selector</string>
    <string name="creds">Main Developer:\nMaxwell Olmen\n\n\n\nMain Designer:\nBryce Davis</string>
    <string name="first_cell">First Cell</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="u2">0</string>
    <string name="u3">0</string>
    <string name="u4">0</string>
    <string name="u5">0</string>
    <string name="u6">0</string>
    <string name="u7">0</string>
    <string name="u8">0</string>
    <string name="u9">0</string>
    <string name="u10">0</string>
    <string name="u11">0</string>
    <string name="u12">0</string>
    <string name="u13">0</string>
    <string name="u14">0</string>
    <string name="u15">0</string>
    <string name="u16">0</string>
    <string name="u17">0</string>
    <string name="u18">0</string>
    <string name="u19">0</string>
    <string name="u20">0</string>
    <string name="u21">0</string>
    <string name="lvl1">Level One</string>
    <string name="title_activity_game1">GameActivity1</string>
    <string name="twentyone">21</string>
    <string name="banner_home_id">ca-app-pub-2360501299483117/5667766186</string>
    <string name="banner_game_id">ca-app-pub-2360501299483117/7144499387</string>
    <string name="interstitial_leave_id">ca-app-pub-2360501299483117/8621232589</string>
    <string name="title_activity_game2">GameActivity2</string>
    <string name="title_activity_good_job">GoodJobActivity</string>
    <string name="lvl_complete">Level Complete!</string>
    <string name="lvl2">Level Two</string>
    <string name="lvl5">Level Five</string>
    <string name="tut">Tutorial</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lvl3">Level Three</string>
    <string name="lvl4">Level Four</string>
    <string name="title_activity_game5">GameActivity5</string>
    <string name="tutorial">TUTORIALS</string>
</resources>
